--- a/week1/day5/Mini -Project/products.css
+++ b/week1/day5/Mini -Project/products.css
@@ -1,38 +1,41 @@
-*{
-    box-sizing: border-box;
-}
 img{
     width: 250px;
     height: 350px;
     padding: 1%;
 }
 .products{
-    max-width: 60px;
+    /* max-width: 60px; */
     border: 0;
     position: relative;
     float: left;
-    width: 25%;
-    padding-left: 5px;
+    /* width: 100%; */
+    padding-left: 5%;
 }
+.new{
+    position: absolute;
+    top: 10px;
+    left: 80px;
+    background-color: green;
+    border-radius: 50%;
+    color: white;
+    width: 3vw;
+    height: 3vw;
+    display: flex; 
+    justify-content: center;
+    align-items: center;
+}
+
 .discount{
     position: absolute;
-    left: 5px;
-    top: 5px;
+    right: 10px;
+    top: 10px;
     background-color: red;
     border-radius: 50%;
     color: white;
     width: 3vw;
     height: 3vw;
     text-align: center;
-}
-.new{
-    position: absolute;
-    right: 5px;
-    top: 5px;
-    background-color: green;
-    border-radius: 50%;
-    color: white;
-    width: 3vw;
-    height: 3vw;
-    text-align: center;  
+    display: flex; 
+    justify-content: center;
+    align-items: center;
 }
