--- a/week1/day5/Mini-Project/products.css
+++ b/week1/day5/Mini-Project/products.css
@@ -96,6 +96,7 @@ body{
     padding: 2%;
     text-align: center;
     margin-left:60px ;
+    margin-bottom: 5px;
 }
 .productname{
     text-align: center;
