--- a/week1/day5/Mini-Project/style.css
+++ b/week1/day5/Mini-Project/style.css
@@ -22,4 +22,8 @@ ul.crownicon li.right{float: right;}
    width: 100%;
    background-color: #000000;
    color: white;
-   text-align: center;
+   text-align: center;}
+
+.addtocart{
+    background-color: blue;
+}
