--- a/week1/day5/Mini-Project/products.css
+++ b/week1/day5/Mini-Project/products.css
@@ -13,11 +13,12 @@ img{
     float: left;
     /* width: 100%; */
     padding-left: 5%;
+    margin-left: 20px;
 }
 .new{
     position: absolute;
     top: 10px;
-    left: 98px;
+    left: 92px;
     background-color: green;
     border-radius: 50%;
     color: white;
@@ -85,6 +86,9 @@ nav{
 }
 body{
     background-color: rgb(237, 237, 237);
+    margin-top: 0px;
+    margin-left: 0px; ;
+    margin-right: 0px;
 }
 .old-price{
     text-decoration: line-through;
@@ -107,9 +111,242 @@ body{
     color: green;
     font-size: larger;
 }
-img:hover
+.products:hover
 {
  -webkit-transform: scale(1.05);
  -ms-transform: scale(1.05);
  transform: scale(1.05);
 }
+.addtocart{
+    text-align: center;
+    padding-bottom: 30px;
+}
+    @media screen and (min-width:600px) and (max-width:768px){
+    .products{
+        border: 0;
+        position: relative;
+        float: left;
+        padding-left: 5%;
+        margin-left: 100px;
+    }
+    .new{
+        position: absolute;
+        top: 10px;
+        left: 40px;
+        background-color: green;
+        border-radius: 50%;
+        color: white;
+        width: 40px;
+        height:40px;
+        display: flex; 
+        justify-content: center;
+        align-items: center;
+    }
+    .discount{
+        position: absolute;
+        right: 10px;
+        top: 10px;
+        background-color: red;
+        border-radius: 50%;
+        color: white;
+        width: 40px;
+        height: 40px;
+        text-align: center;
+        display: flex; 
+        justify-content: center;
+        align-items: center;
+        transition: .3s ease
+}
+    }
+@media screen and (max-width:600px){
+    .products{
+        border: 0;
+        position: relative;
+        float: left;
+        padding-left: 5%;
+        margin-left: 100px;
+    }
+    .new{
+        position: absolute;
+        top: 10px;
+        left: 35px;
+        background-color: green;
+        border-radius: 50%;
+        color: white;
+        width: 40px;
+        height:40px;
+        display: flex; 
+        justify-content: center;
+        align-items: center;
+    }
+    .discount{
+        position: absolute;
+        right: 10px;
+        top: 10px;
+        background-color: red;
+        border-radius: 50%;
+        color: white;
+        width: 40px;
+        height: 40px;
+        text-align: center;
+        display: flex; 
+        justify-content: center;
+        align-items: center;
+        transition: .3s ease
+    }
+    }
+@media screen and (min-width:768px) and (max-width:992px){
+    .products{
+        border: 0;
+        position: relative;
+        float: left;
+        padding-left: 5%;
+        margin-left: 50px;
+    }
+    .new{
+        position: absolute;
+        top: 10px;
+        left: 55px;
+        background-color: green;
+        border-radius: 50%;
+        color: white;
+        width: 40px;
+        height:40px;
+        display: flex; 
+        justify-content: center;
+        align-items: center;
+    }
+    .discount{
+        position: absolute;
+        right: 10px;
+        top: 10px;
+        background-color: red;
+        border-radius: 50%;
+        color: white;
+        width: 40px;
+        height: 40px;
+        text-align: center;
+        display: flex; 
+        justify-content: center;
+        align-items: center;
+        transition: .3s ease
+    }
+    }
+@media screen and (min-width:992px) and (max-width:1200px){
+    .products{
+        border: 0;
+        position: relative;
+        float: left;
+        padding-left: 1%;
+        margin-left: 5px;
+    }
+    .new{
+        position: absolute;
+        top: 10px;
+        left: 25px;
+        background-color: green;
+        border-radius: 50%;
+        color: white;
+        width: 40px;
+        height:40px;
+        display: flex; 
+        justify-content: center;
+        align-items: center;
+    }
+    .discount{
+        position: absolute;
+        right: 10px;
+        top: 10px;
+        background-color: red;
+        border-radius: 50%;
+        color: white;
+        width: 40px;
+        height: 40px;
+        text-align: center;
+        display: flex; 
+        justify-content: center;
+        align-items: center;
+    }
+    img{
+    width: 225px;
+    height: 325px;
+    padding: 1%;
+    border: 3PX SOLID #000000;
+    border-radius: 5%;
+    margin-bottom: 10px;
+    }
+    }
+@media screen and (min-width:1200px){
+    .products{
+        border: 0;
+        position: relative;
+        float: left;
+        padding-left: 10px;
+        margin-left: 25px;
+        margin-right: 10px;
+
+    }
+    .new{
+        position: absolute;
+        top: 10px;
+        left: 15px;
+        background-color: green;
+        border-radius: 50%;
+        color: white;
+        width: 30px;
+        height:30px;
+        display: flex; 
+        justify-content: center;
+        align-items: center;
+        font-size: small;
+    }
+    .discount{
+        position: absolute;
+        right: 25px;
+        top: 10px;
+        background-color: red;
+        border-radius: 50%;
+        color: white;
+        width: 30px;
+        height: 30px;
+        text-align: center;
+        display: flex; 
+        justify-content: center;
+        align-items: center;
+        font-size: small;
+    }
+    img{
+    width: 200px;
+    height: 275px;
+    padding: 1%;
+    border: 3PX SOLID #000000;
+    border-radius: 5%;
+    margin-bottom: 10px;
+    
+    }
+    .productname{
+    text-align: center;
+    font-size: medium;
+    font-weight: bold;
+}
+.old-price{
+    text-decoration: line-through;
+    color: grey;
+    font-size: small;
+}
+.design{
+    display: inline-block;
+    padding: 2%;
+    text-align: center;
+    margin-left:60px ;
+    margin-bottom: 5px;
+}
+.current-price{
+    color: green;
+    font-size: medium;
+}
+.addtocart{
+    text-align: center;
+    padding-bottom: 50px;
+}
+    }
