--- a/week2/day5/PortfolioProject/style.css
+++ b/week2/day5/PortfolioProject/style.css
@@ -86,6 +86,7 @@ h1{
     font-size: 20px;
     color: rgb(18, 17, 75);
     font-weight: bold;
+    padding-bottom: 10px;
 }
 #projects{
     background-color: rgba(156, 146, 240, 0.1);
@@ -132,8 +133,21 @@ form{
     padding-right: 60px;
     color: #100545;
 }
-.btnboth{
-    display: inline-block;
+.btnboth,.badges,.skillsset{
+    display: flex;
     vertical-align:middle;
-    margin: 0px;
+}
+.buttonproject,.skibtn,.buttonproject1,.skibtn1{
+    margin-right: 10px;
+}
+.textprojects{
+    margin-top: 55px;
+}
+.btn2{
+    background-color:#a6d5ff;
+    color: #100545;
+    font-size: large;
+    border-radius: 10%;
+    padding: 5px;
+    border: none;
 }
