--- a/week2/day5/PortfolioProject/style.css
+++ b/week2/day5/PortfolioProject/style.css
@@ -151,3 +151,12 @@ form{
     padding: 5px;
     border: none;
 }
+.footercontent {
+    text-align:  center;
+    background-color:#100545;
+    color:#a6d5ff;
+   } 
+#fa-icon{
+    font-size: x-large;
+    padding: 10px;
+}
