--- a/week1/day4/Dailychallenge-mediaqueries/avengers.css
+++ b/week1/day4/Dailychallenge-mediaqueries/avengers.css
@@ -1,24 +1,27 @@
-body{
-    background: url(thor.jpg);
-    height: 100vh;
-    width: 100%;
-    background-repeat: no-repeat;
+body {
     margin: 0px;
-    background-size: cover;
 }
-ul.thor{
+
+img {
+    width: 100%;
+    height: 150%;
+    position: relative;
+    margin: 0px;
+}
+
+ul.thor {
     list-style-type: none;
     margin: 0;
     padding: 25px;
     overflow: hidden;
     background-color: hsl(0, 0%, 20%);
-    padding-bottom: 10px;
 }
 
 ul.thor li {
     float: left;
 }
-ul.thor li a{
+
+ul.thor li a {
     display: block;
     text-align: center;
     padding: 14px;
@@ -28,96 +31,131 @@ ul.thor li a{
     font-weight: bold;
     font-size: large;
 }
-ul.thor li.right{float: right;}
-.textthor{
+
+ul.thor li.right {
+    float: right;
+}
+
+.textthor {
     padding-left: 50px;
 }
-.thortitle{
+
+.thortitle {
     position: absolute;
     float: left;
-    top: 400px;
+    top: 300px;
     font-size: 50px;
     font-family: sans-serif;
 }
-.thorpara{
+
+.thorpara {
     position: absolute;
     float: left;
-    top: 575px;
+    top: 475px;
     width: 1000px;
     font-family: sans-serif;
 }
 
-@media screen and (max-width:768px){
-    h1{
+/* MEDIA QUERIES */
+/* Small devices  */
+@media screen and (min-width: 600px) and (max-width : 767px){
+    h1 {
         font-size: 35px;
     }
-    ul.thor{
-    list-style-type: none;
-    margin: 0;
-    padding: 40px;
-    overflow: hidden;
-    background-color: yellow;
-    padding-bottom: 10px;
+
+    nav.banner , ul.thor {
+        background-color: yellow;
+        padding-bottom: 10px;
+        position: relative;
+
     }
-    nav .banner{
-        margin: 0;
-        padding: 0;
-        width:1000px;
+    ul.thor li a {
+        color: rgb(0, 0, 0);
     }
-    body{
-    background: url(thor.jpg);
-    height: 100vh;
-    width: 100%;
-    background-repeat: no-repeat;
-    margin: 0px;
-    background-size: cover;
+    .thortitle {
+        position: absolute;
+        top: 100px;
+        font-size: 35px;
+        font-family: sans-serif;
+    }
+
+    .thorpara {
+        position: absolute;
+
+        top: 225px;
+        width: auto;
+        font-family: sans-serif;
+        font-size: 15px;
+    }
 }
-}
-/* }
-@media screen and (min-width:768px) and (max-width:992px){
-    h1{
+/* Medium devices  */
+@media screen and (min-width: 768px) and (max-width : 991px){
+    h1 {
         font-size: 25px;
     }
-    ul.thor{
-        background-color:lightgreen;
-        color: black;
-        margin: 0%;
+
+    nav.banner , ul.thor {
+        background-color: lightgreen;
+        padding-bottom: 10px;
     }
-    body{
-    background: url(thor.jpg);
-    height: 100vh;
-    width: 100%;
-    background-repeat: no-repeat;
-    margin: 0px;
-    background-size: cover;
+    ul.thor li a {
+        color: rgb(0, 0, 0);
+    }
+    .thortitle {
+        position: absolute;
+        top: 150px;
+        font-size: 35px;
+        font-family: sans-serif;
+        margin-left: 5px;
+    }
+
+    .thorpara {
+        position: absolute;
+        top: 250px;
+        width: auto;
+        font-family: sans-serif;
+        font-size: 15px;
+        margin-left: 5px;
+    }
 }
-}
-@media all and (min-width:992px) and (max-width:1200px){
-    ul.thor{
+/* Large devices  */
+@media screen and (min-width: 992px) and (max-width : 1199px){
+
+    nav.banner , ul.thor {
         background-color: red;
-        color: white;
+        padding-bottom: 10px;
+    }
+    ul.thor li a {
+        color:white;
     }
     h1{
+        font-size: 55px;
+    }
+    .thortitle {
     position: absolute;
     float: left;
     top: 300px;
-    font-size: 35px;
-    font-family: sans-serif;
-    }   
-    p{
-    position: absolute;
-    float: left;
-    top: 350px;
+    font-size: 50px;
     font-family: sans-serif;
     }
-    
+
+    .thorpara {
+        position: absolute;
+        top: 300px;
+        left: 500px;
+        width: 600px;
+        font-family: sans-serif;
+
+    }
 }
-@media all and (min-width:1200px){
-    h1{
-        font-size: 35px;
-    }
-    ul.thor{
+/* Extra Large devices  */
+@media screen and (min-width: 1200px) {
+
+    nav.banner , ul.thor {
         background-color: black;
+        padding-bottom: 10px;
+    }
+    ul.thor li a {
         color: white;
     }
-} */
+}
